docs/sf-export/sfdx-raw/objects/Payment_Calculator_Settings__c/Payment_Calculator_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Payment Calculator Settings</label>
</CustomObject>