docs/sf-export/sfdx-raw/objects/Payment_Calculator_Settings__c/fields/Min_Savings_Collection_Percent_BiMonthly__c.field-meta.xml
<CustomField>
    <fullName>Min_Savings_Collection_Percent_BiMonthly__c</fullName>
    <label>Min Savings Collection Percent BiMonthly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>