docs/sf-export/sfdx-raw/objects/Payment_Calculator_Settings__c/fields/Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee__c</fullName>
    <label>Service Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>